more on related work

--- a/papers/conext2022/cloudmorphing.bib
+++ b/papers/conext2022/cloudmorphing.bib
@@ -329,3 +329,11 @@ numpages = {8},
 keywords = {Nash Bargaining, game theory, distributed resource allocation, cloud computing},
 series = {SASOW '12}
 }
+
+@INPROCEEDINGS{Murphy94distributedpricing,
+    author = {John Murphy and Liam Murphy and Edward C. Posner},
+    title = {Distributed Pricing For Embedded ATM Networks},
+    booktitle = {in Proceedings of the 14th International Teletraffic Congress, edited by J. Labetoulle and J.W. Roberts, Elsevier Science},
+    year = {1994},
+    pages = {1053--1063}
+}
