--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -81,7 +81,7 @@ without affecting the stability of the system.
 
 To realize such systems, it requires various technical advances across
 many fields.  Among other things, new resource management model is
-needed.
+needed for distributed diverse cloud resources.
 
 %%It is a vision for dynamic distributed resource management in 10 years.
 %%research vision to set long-term directions, find/prioritize research
