--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -31,5 +31,6 @@ Simulation scenarios:
         function.
   \item	{\bf randomize:} 4 nodes and 4 links with randomization
   \item	{\bf surge:} same as above but with a request surge at one location
+  \item {\bf premium service:} 4 nodes with 3 standard and 1 premium services.
   \item	{\bf complex?:} realistic scenario
 \end{enumerate}
