--- a/papers/conext2022/main.tex
+++ b/papers/conext2022/main.tex
@@ -46,6 +46,8 @@
 
 We have shown that ...
 
+Our simulation tool is publicly available from (URL removed for review).
+
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{cloudmorphing}
 
